--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "confetti-js": "^0.0.18",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-on-screen": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
