--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "confetti-js": "^0.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-on-screen": "^2.1.1"
+    "react-on-screen": "^2.1.1",
+    "scrollreveal": "^4.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
